fixed responsive overflow problem in tablet responsive view for campus map.

--- a/src/components/campus/styles/campusMap.css
+++ b/src/components/campus/styles/campusMap.css
@@ -10,7 +10,26 @@
     background-color: lightblue;
     padding: 10px;
     cursor:pointer;
+    overflow-y: auto;
 }
+
+.back-button {
+    padding: 5px 5px;
+    background-color: white;
+    border: 2px solid #ccc;
+    border-radius: 5px;
+    color: #333;
+    font-size: 15px;
+    cursor: pointer;
+    margin-bottom: 20px;
+    transition: background-color 0.3s ease, transform 0.2s ease;
+}
+
+.back-button:hover {
+    background-color: #e0e0e0;
+    transform: scale(1.02);
+}
+
 
 .sidebar h2 {
     font-size: 1.5rem;
@@ -117,6 +136,34 @@
 
 
 @media only screen and (max-width: 1024px) {
+
+    .back-button {
+        padding: 5px 5px;
+        background-color: white;
+        border: 2px solid #ccc;
+        border-radius: 5px;
+        color: #333;
+        font-size: 12px;
+        cursor: pointer;
+        margin-bottom: 20px;
+        transition: background-color 0.3s ease, transform 0.2s ease;
+    }
+
+    .sidebar h2 {
+        font-size: 1.2rem;
+    }
+
+    .sidebar-item, .category-item {
+        display: flex;
+        align-items: center;
+        padding: 10px;
+        margin-bottom: 15px;
+        background-color: lightblue;
+        cursor: pointer;
+        transition: background-color 0.3s ease;
+        font-size: 12px;
+    }
+
     .campus-map-container {
         display: flex;
         height: 50vh;
